fixed rabbitMQ githubaction?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
           - 5672:5672
           - 15672:15672
         env:
-          - RABBITMQ_DEFAULT_USER: guest
-          - RABBITMQ_DEFAULT_PASS: guest
+          RABBITMQ_DEFAULT_USER: guest
+          RABBITMQ_DEFAULT_PASS: guest
         options: >-
           --health-cmd "rabbitmqctl status"
           --health-interval 10s
